gitops/workloads/envs/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: asbdemo
  labels:
    app.kubernetes.io/part-of: asbdemo
